--- a/_data/cards/ludolphus.yml
+++ b/_data/cards/ludolphus.yml
@@ -1,7 +1,4 @@
 username: ludolphus
-flattr: ludolphus
-bitcoin: 08154711ANNODOMINI
-patreon: http://www.patreon.com/dieKadda
-paypal: https://www.paypal.me/ludolphus/10eur
+name: Steven van Loef
 description: >
-  Hier ist eine **Description**. Absätze funktionieren hoffentlich auch!? Ok, nur wenn 2 Leerzeilen eingefügt wurden.
+  [xfer.li](http://cloud-app.net/welcome)
