--- a/_data/cards/ryantharp.yml
+++ b/_data/cards/ryantharp.yml
@@ -1,4 +1,4 @@
 username: ryantharp
-avatar: /img/missing.png
+name: Ryan Tharp
 description: >
-  [Vidcast](http://vidcast-app.net/)
+  [Vidcast](http://vidcast-app.net)
